--- a/index.html
+++ b/index.html
@@ -19,15 +19,18 @@
    </header>
    <section>
     <div>
-        <h1>Treinos <span>exclusivos </span>para você!</h1>
+        <h1>Treinos <span>exclusivos <br> </span>para você!</h1> <br> <br>
         <p>Nós criamos treinos <b>exclusivos e únicos para você.</b><br>
-        Invista no seu corpo e <b>tenha muito mais performace </b>e qualidade de vida.
-      </p>
+        Invista no seu corpo e <b>tenha muito mais performace </b> e <br> qualidade de vida.
+      </p> <br> <br>
       <button>Comece já</button>
     </div>
-    <div>
-        <img src="stylles/img/treino.avif" alt="imagem">
+    <div class="imagem">
+        <img src="stylles/img/Right.png" alt="imagem">
     </div>
    </section>
+   <footer>
+    <p>Fale conosco no Instagram <a href="https://www.intagram.com/viihsz0" target="_blank">@treine.me</a> </p>
+   </footer>
 </body>
 </html>
