--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p>Nós criamos treinos <b>exclusivos e únicos para você.</b><br>
         Invista no seu corpo e <b>tenha muito mais performace </b> e <br> qualidade de vida.
       </p> <br> <br>
-      <button>Comece já</button>
+      <button id="btn">Comece já</button>
     </div>
     <div class="imagem">
         <img src="stylles/img/Right.png" alt="imagem">
@@ -32,5 +32,7 @@
    <footer>
     <p>Fale conosco no Instagram <a href="https://www.intagram.com/viihsz0" target="_blank">@treine.me</a> </p>
    </footer>
+   <script src="stylles/script.js"></script>
+
 </body>
 </html>
